feat: adding traces to UF components